Add mock name enquiry endpoint
